build: target JDK 25 and switch thread pools to virtual threads
- Set maven.compiler.release to 25 (pom.xml)
- RolePool: role workers now run on Java 21+ virtual threads via
  Executors.newThreadPerTaskExecutor(Thread.ofVirtual()...), removing the
  fixed 64-thread pool cap
- AgentSystem.addRoles and StateStore.restoreComputers: parallel role
  setup / computer restore use virtual threads with a Semaphore to keep
  the original concurrency cap
- README: update prerequisite to JDK 25+ and document virtual-thread usage